Added getList endpoint
