# docs/swagger.json
@@ -15,8 +15,58 @@
         "version": "1.0"
     },
     "host": "localhost:8900",
-    "basePath": "/api/v1",
+    "basePath": "/v1",
     "paths": {
+        "/categories": {
+            "get": {
+                "description": "Listing resource for categories",
+                "tags": [
+                    "category"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Data queried from",
+                        "name": "_start",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Data queried to",
+                        "name": "_end",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Sort by field",
+                        "name": "_sort",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Sort direction",
+                        "name": "_order",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Success"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.Error"
+                        }
+                    }
+                }
+            }
+        },
         "/users": {
             "get": {
                 "description": "get a list of users",
@@ -42,6 +92,20 @@
         }
     },
     "definitions": {
+        "models.Error": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.Success": {
+            "type": "object",
+            "properties": {
+                "data": {}
+            }
+        },
         "models.User": {
             "type": "object",
             "properties": {
