# models/categories.go
@@ -1,0 +1,8 @@
+package models
+
+const CategoriesTable = "categories"
+
+type Category struct {
+	ID   string
+	Name string
+}
